<resources>
    <string name="app_name">CatemApp</string>
    <string name="catemapp">CatemApp</string>
    <string name="sitios_tur_sticos2">Sitios turísticos</string>
    <string name="playas">Playas</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="hoteles2">Hoteles</string>
    <string name="bienvenido_a_catemaco">Bienvenido a Catemaco</string>
    <string name="empecemos_a_explorar">Empecemos a explorar</string>
    <string name="sitios_tur_sticos">Sitios turísticos</string>
    <string name="catemaco_es_una_ciudad_m_gica_con_una_variedad_de_sitios_tur_sticos_que_har_n_de_tu_vista_un_recuerdo_inolvidable_donde_podr_s_reencontrarte_con_la_naturaleza">Catemaco es una ciudad mágica con una variedad de sitios turísticos que harán de tu vista un recuerdo inolvidable donde podrás reencontrarte con la naturaleza</string>
    <string name="nanciyaga">Nanciyaga</string>
    <string name="isla_de_los_monos2">ISLA DE LOS MONOS</string>
    <string name="la_jungla">La jungla</string>
    <string name="laguna_de_catemaco">Laguna de catemaco</string>
    <string name="isla_de_los_monos">ISLA DE LOS MONOS</string>
    <string name="sontecomapan">SONTECOMAPAN</string>
    <string name="nanciyaga_es_el_lugar_donde_la_selva_est_de_regreso_y_en_donde_confluye_la_selva_tropical_m_s_al_norte_del_continente_americano_con_su_gran_diversidad_en_especies_de_flora_y_fauna_el_lago_y_el_manantial_que_le_dan_vida_al_entorno_hacen_posible_que_el_visitante_en_armon_a_con_la_naturaleza_regrese_a_su_origen_resguardando_el_entorno_y_favoreci_ndolo_a_trav_s_del_turismo_sustentable_la_reserva_ecol_gica_nanciyaga_te_ofrece_una_alternativa_de_descanso_en_medio_de_la_selva_tropical_de_los_tuxtla_en_donde_podr_s_disfrutar_desde_un_recorrido_por_la_selva_un_temazcal_una_cena_rom_ntica_con_vista_al_lago_durante_el_atardecer_y_muchas_m_s_experiencias_nicas">Nanciyaga es el lugar donde la selva está de regreso y en donde confluye la selva tropical más al norte del continente americano, con su gran diversidad en especies de flora y fauna, el lago y el manantial que le dan vida al entorno, hacen posible que el visitante en armonía con la naturaleza, regrese a su origen. Resguardando el entorno y favoreciéndolo a través del turismo sustentable, la reserva ecológica Nanciyaga te ofrece, una alternativa de descanso en medio de la selva tropical de los Tuxtla, en donde podrás disfrutar desde un recorrido por la selva, un temazcal, una cena romántica con vista al lago durante el atardecer y muchas más Experiencias Únicas.</string>
    <string name="al_pasar_por_el_lugar_el_visitante_podr_observar_a_los_monos_los_cuales_ha_dado_la_vuelta_aportando_una_fuerte_entrada_de_efectivo_para_mucha_de_la_poblaci_n_de_catemaco_notable_obviamente_por_los_muchos_gritones_a_lo_largo_de_la_orilla_de_la_laguna_que_te_invitan_a_tomar_un_paseo_en_lancha_a_pesar_de_estos_gritones_el_paseo_en_lancha_es_una_experiencia_maravillosa_para_considerarse_en_la_laguna_la_vista_de_la_orilla_de_la_ciudad_de_catemaco_y_la_vista_de_las_colinas_volc_nicas_vecinas_del_lago_son_absolutamente_maravillosas">Al pasar por el lugar el visitante podrá observar a los monos, los cuales ha dado la vuelta aportando una fuerte entrada de efectivo para mucha de la población de Catemaco, notable obviamente por los muchos gritones a lo largo de la orilla de la Laguna que te invitan a tomar un paseo en lancha. A pesar de estos gritones, el paseo en lancha es una experiencia maravillosa para considerarse en la Laguna. La vista de la orilla de la Ciudad de Catemaco y la vista de las colinas volcánicas vecinas del lago son absolutamente maravillosas.</string>
    <string name="la_localidad_de_la_jungla_est_situado_en_el_municipio_de_catemaco_en_el_estado_de_veracruz_de_ignacio_de_la_llave_hay_4_habitantes_dentro_de_todos_los_pueblos_del_municipio_ocupa_el_n_mero_184_en_cuanto_a_n_mero_de_habitantes_la_jungla_est_a_342_metros_de_altitud_el_pueblo_de_la_jungla_est_situado_a_5_3_kil_metros_de_catemaco_que_es_la_localidad_m_s_poblada_del_municipio_en_direcci_n_este_si_navegas_por_nuestra_p_gina_web_encontrar_s_adem_s_un_mapa_con_la_ubicaci_n_de_la_jungla">La localidad de La Jungla está situado en el Municipio de Catemaco (en el Estado de Veracruz de Ignacio de la Llave). Hay 4 habitantes. Dentro de todos los pueblos del municipio, ocupa el número 184 en cuanto a número de habitantes. La Jungla está a 342 metros de altitud. El pueblo de La Jungla está situado a 5.3 kilómetros de Catemaco, que es la localidad más poblada del municipio, en dirección Este. Si navegas por nuestra página web, encontrarás además un mapa con la ubicación de La Jungla.</string>
    <string name="la_laguna_de_catemaco_tiene_una_extensi_n_de_11km_de_ancho_por_8_de_largo_rodeada_por_exuberante_vegetaci_n_dentro_de_ella_se_encuentran_varias_islas_como_la_de_tanaxpillo_tambi_n_llamada_la_de_los_monos_porque_en_ella_existen_desde_1979_una_colonia_de_macacos_rabones_tra_dos_de_tailandia_y_los_cuales_han_desarrollado_la_habilidad_para_nadar_otra_es_la_de_las_garzas_donde_se_refugian_parvadas_de_distintas_especies_que_sobrevuelan_el_lago_por_ser_esta_zona_un_verdadero_para_so_ha_servido_de_set_cinematogr_fico_de_numerosas_pel_culas_de_corte_internacional">La Laguna de Catemaco tiene una extensión de 11km de ancho por 8 de largo; rodeada por exuberante vegetación, dentro de ella se encuentran varias islas como la de Tanaxpillo, también llamada la de los monos porque en ella existen desde 1979 una colonia de macacos rabones traídos de Tailandia y los cuales han desarrollado la habilidad para nadar; otra es la de las Garzas, donde se refugian parvadas de distintas especies que sobrevuelan el lago; por ser esta zona un verdadero paraíso, ha servido de set cinematográfico de numerosas películas de corte internacional.</string>
    <string name="lugar_cercano_a_la_laguna_de_catemaco_donde_se_puede_viajar_en_lancha_y_admirar_los_esteros_y_r_os_que_la_nutren_hasta_la_barra_que_separa_el_agua_dulce_del_agua_marina_desde_catemaco_se_puede_viajar_por_una_carretera_asfaltada_a_la_laguna_costera_de_sontecomapan_que_se_encuentra_a_18_kil_metros_en_la_peque_a_poblaci_n_de_sontecomapan_se_puede_tomar_una_embarcaci_n_que_despu_s_de_surcar_bajo_los_manglares_salen_a_la_laguna_el_recorrido_puede_ser_alrededor_de_sta_por_sus_esteros_y_r_os_que_la_nutren_o_llegar_hasta_la_barra_que_separa_el_agua_dulce_del_agua_marina_ah_se_localiza_una_colonia_de_pescadores_una_amplia_playa_y_se_puede_encontrar_alg_n_lugar_para_comer">Lugar cercano a la laguna de Catemaco, donde se puede viajar en lancha y admirar los esteros y ríos que la nutren hasta la barra que separa el agua dulce del agua marina. Desde Catemaco se puede viajar por una carretera asfaltada a la laguna costera de Sontecomapan, que se encuentra a 18 kilómetros. En la pequeña población de Sontecomapan se puede tomar una embarcación, que después de surcar bajo los manglares salen a la laguna. El recorrido puede ser alrededor de ésta, por sus esteros y ríos que la nutren o llegar hasta la barra que separa el agua dulce del agua marina. Ahí se localiza una colonia de pescadores, una amplia playa y se puede encontrar algún lugar para comer.</string>
    <string name="hoteles">Hoteles</string>
    <string name="a_lo_largo_de_la_ciudad_encontrar_s_una_variedad_de_hoteles_donde_podr_s_hospedarte_y_descansar_despu_s_de_un_d_a_de_aventura_en_la_ciudad_nsiempre_encontraras_una_opci_n_que_se_ajuste_a_tu_medida">A lo largo de la ciudad encontrarás una variedad de hoteles donde podrás hospedarte y descansar después de un día de aventura en la ciudad. \nSiempre encontraras una opción que se ajuste a tu medida</string>
    <string name="la_finca_hotel">LA FINCA HOTEL</string>
    <string name="hotel_del_angel">Hotel del Ángel</string>
    <string name="hotel_playa_azul">Hotel Playa Azul</string>
    <string name="hotel_playa_cristal">Hotel Playa Cristal</string>
    <string name="hotel_del_lago">Hotel del Lago</string>
    <string name="el_hotel_del_lago_ofrece_alojamiento_con_aire_acondicionado_en_catemaco_el_establecimiento_cuenta_con_restaurante_recepci_n_24_horas_servicio_de_habitaciones_y_wifi_gratuita_el_hotel_cuenta_con_piscina_cubierta_y_sal_n_compartido_todas_las_habitaciones_incluyen_armario_tv_de_pantalla_plana_y_ba_o_privado_el_hotel_del_lago_sirve_un_desayuno_americano_o_a_la_carta_el_alojamiento_dispone_de_terraza_hablamos_tu_idioma_cambio_de_moneda_necesitas_efectivo_en_el_alojamiento_hay_servicio_de_cambio_de_direcci_n_paseo_del_malec_n_33_centro_95870_catemaco_ver_tel_fono_294_943_0160">El Hotel del lago ofrece alojamiento con aire acondicionado en Catemaco. El establecimiento cuenta con restaurante, recepción 24 horas, servicio de habitaciones y WiFi gratuita.\n El hotel cuenta con piscina cubierta y salón compartido. Todas las habitaciones incluyen armario, TV de pantalla plana y baño privado. El Hotel del lago sirve un desayuno americano o a la carta. El alojamiento dispone de terraza.\n ¡Hablamos tu idioma! Cambio de moneda: ¿Necesitas efectivo? En el alojamiento hay servicio de cambio de Dirección: Paseo del Malecón 33, Centro, 95870 Catemaco, Ver. Teléfono: 294 943 0160</string>
    <string name="salir">Salir</string>
    <string name="en_la_ciudad_de_catemaco_existe_una_gastronom_a_exquista_muy_variada_para_complacer_los_paladares_m_s_exigentes_a_trav_s_de_sus_diversos_diversos_restaurantes_podr_s_conocer_la_mag_a_de_la_gastronomia_de_los_tuxtlas">En la ciudad de Catemaco existe una gastronomía exquista muy variada para complacer los paladares más exigentes. A través de sus diversos diversos restaurantes podrás conocer la magía de la gastronomia de los Tuxtlas.</string>
    <string name="restaurante_la_ola">Restaurante La Ola</string>
    <string name="restaurante_la_casita">Restaurante La Casita</string>
    <string name="restaurante_tierra_de_tucanes">Restaurante Tierra de Tucanes</string>
    <string name="restaurante_el_saz_n">Restaurante El Sazón</string>
    <string name="restaurante_palapas_gorell">Restaurante Palapas Gorell</string>
    <string name="paseo_en_lancha">Paseo en lancha</string>
    <string name="tranquilidad_es_justo_lo_que_ofrecen_las_playas_cercanas_a_catemaco_lugares_tur_sticos_ideales_para_la_pr_ctica_de_turismo_alternativo_y_de_aventura_en_sus_r_os_cascadas_cuevas_y_acantilados_tambi_n_podr_s_practicar_rappel_tomar_recorridos_en_lancha_y_paseos_a_caballo">Tranquilidad es justo lo que ofrecen las playas cercanas a Catemaco, lugares turísticos ideales para la práctica de turismo alternativo y de aventura en sus ríos, cascadas, cuevas y acantilados. También podrás practicar rappel, tomar recorridos en lancha y paseos a caballo.</string>
    <string name="la_barra_de_sontecomoapan">La Barra de Sontecomoapan</string>
    <string name="playa_escondida">Playa Escondida</string>
    <string name="playa_de_balzapote">Playa de Balzapote</string>
    <string name="playa_de_montepio">Playa de Montepio</string>
    <string name="playa_de_roca_partida">Playa de Roca Partida</string>
    <string name="hotel_los_arcos">Hotel Los Arcos</string>
    <string name="acerca_de">Acerca de...</string>
</resources>