<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".Hotel">
    <include
        layout="@layout/main_toolbar"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/hoteles"
        android:textSize="50dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/a_lo_largo_de_la_ciudad_encontrar_s_una_variedad_de_hoteles_donde_podr_s_hospedarte_y_descansar_despu_s_de_un_d_a_de_aventura_en_la_ciudad_nsiempre_encontraras_una_opci_n_que_se_ajuste_a_tu_medida"/>

    <Button
        android:textStyle="bold"
        android:id="@+id/btn_hotelLago"
        android:layout_margin="10dp"
        android:text="@string/hotel_del_lago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/btn_Finca"
        android:layout_margin="10dp"
        android:text="@string/la_finca_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/btn_playaCristal"
        android:layout_margin="10dp"
        android:text="@string/hotel_playa_cristal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/btn_playaAzul"
        android:layout_margin="10dp"
        android:text="@string/hotel_playa_azul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/btn_hotelAngel"
        android:layout_margin="10dp"
        android:text="@string/hotel_del_angel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textStyle="bold"
        android:id="@+id/btn_hotelArcos"
        android:layout_margin="10dp"
        android:text="@string/hotel_los_arcos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>