<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".Playas">
    <include
        layout="@layout/main_toolbar"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/playas"
        android:textSize="50dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/tranquilidad_es_justo_lo_que_ofrecen_las_playas_cercanas_a_catemaco_lugares_tur_sticos_ideales_para_la_pr_ctica_de_turismo_alternativo_y_de_aventura_en_sus_r_os_cascadas_cuevas_y_acantilados_tambi_n_podr_s_practicar_rappel_tomar_recorridos_en_lancha_y_paseos_a_caballo"/>


    <Button
        android:textStyle="bold"
        android:id="@+id/btn_labarra"
        android:layout_margin="10dp"
        android:text="@string/la_barra_de_sontecomoapan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/playa_escondida"
        android:layout_margin="10dp"
        android:text="@string/playa_escondida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/playa_balsa"
        android:layout_margin="10dp"
        android:text="@string/playa_de_balzapote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/playa_monte"
        android:layout_margin="10dp"
        android:text="@string/playa_de_montepio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textStyle="bold"
        android:id="@+id/playa_roca"
        android:layout_margin="10dp"
        android:text="@string/playa_de_roca_partida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>